--- a/Interfaces/Practica_01/stilo.css
+++ b/Interfaces/Practica_01/stilo.css
@@ -95,6 +95,8 @@ p{
     text-align: center;
 }
 #burro{
-    border-color:black solid 2px ;
     text-align: center;
+}
+#burro img{
+    border:black solid 1px ;
 }
