--- a/Interfaces/Practica_01/stilo.css
+++ b/Interfaces/Practica_01/stilo.css
@@ -1,102 +1,243 @@
+/* Definir fuentes personalizadas */
 @font-face {
     font-family: 'Ballpark';
-    src: url(recursos/fonts/ballpark.eot);
-    src:url(recursos/fonts/ballpark.ttf);
+    src: url('recursos/fonts/ballpark.eot');
+    src: url('recursos/fonts/ballpark.eot?#iefix') format('embedded-opentype'), 
+         url('recursos/fonts/ballpark.woff') format('woff'), 
+         url('recursos/fonts/ballpark.ttf') format('truetype'), 
+         url('recursos/fonts/ballpark.svg#BallparkWeiner') format('svg');
+    font-weight: normal; 
+    font-style: normal; 
 }
 @font-face{
     font-family:  'Dayrom';
-    src: url(recursos/fonts/dayrom.ttf);
+    src: url('recursos/fonts/dayrom.eot'); 
+    src: url('recursos/fonts/dayrom.eot?#iefix') format('embedded-opentype'), 
+         url('recursos/fonts/dayrom.woff') format('woff'), 
+         url('recursos/fonts/dayrom.ttf') format('truetype'), 
+         url('recursos/fonts/dayrom.svg#Dayrom') format('svg'); 
+    font-weight: normal; 
+    font-style: normal; 
 }
 
-/* *{
-    border:solid 2px red;
-    
-} */
+
+/*Elementos principales de la pagina */
 
 body{
     background: url('recursos/images/yellow_background.png');
-    width:auto;
+    font-family: 'Trebuchet MS',  Arial, sans-serif ;
+    color: #181818;
 }
 
-header{
-    margin: 5%;
+#main_wrapper{
+    width: 900px;
+    margin: auto;
 }
 
-section{
-    margin: 2%;
-    width: 90%;
-    box-sizing: border-box;
-}
-
-aside{
-    
-    float: right;
-    width: 30%;
-    background-color: grey;
-    margin:2%;
-    padding: 1%;
-    box-sizing: border-box;
-}
-
-article{
-    width: 70%;
-    box-sizing: border-box;
-    padding: 1%;
-}
-
-nav {
-    float: right;
-    display: inline;
-    width: 70%;
-    text-align: right;
-    margin-right: 5%;
-   
-}
-nav li{
-   list-style-type: none;
-   display: inline;
-   padding-right: 2px;
-   text-transform: uppercase;
-   font-family: 'Dayrom';
-}
-
-footer{
-    background: url('recursos/images/top.png') no-repeat top center, url('recursos/images/line.png') repeat-x top, url('images/shadow.png') repeat-x top;
-    padding-top: 25px;
-}
-
-.rotate90{
-    transform: rotate(90);
-    text-align: center;
-}
-
-
-h2{
+section h1, footer h1, nav a{
+    font-family: Dayrom, serif;
+    font-weight:  normal;
     text-transform: uppercase;
-    font-family: 'Dayrom';
-}
-p{
-    text-align: justify;
 }
 
-.logo{
-    font-family: 'Ballpark';
-    font-size: xx-large;
+/* Encabezado */
+header{
+    background: url('recursos/images/line.png') repeat-x bottom;
 }
-#cabeza{
-    margin: 2%;
+
+#main_title{
+    display: inline-block;
 }
-#portada{
-    background-image: "recursos/images/sanfrancisco.jpg";
-    width:100%;
-    height: auto;
+header h1{
+    font-family: 'Ballpark', serif;
+    font-size:  2.5em;
+    font-weight: normal;
 }
-#flecha{
-    text-align: center;
+#logo, header h1{
+    display: inline-block;
+    margin-bottom: 0px;
 }
-#burro{
-    text-align: center;
+
+header h2{
+    font-family: Dayrom, serif;
+    font-size: 1.1em;
+    margin-top: 0px;
+    font-weight: normal;
 }
-#burro img{
-    border:black solid 1px ;
+
+/*Navegación */
+
+nav{
+    display: inline-block;
+    width: 740px;
+    text-align:right;
+}
+
+nav ul{
+    list-style-type: none;
+}
+
+nav li{
+    display: inline-block;
+    margin-right: 15px;
+}
+
+nav a{
+    font-size: 1.3em;
+    color: #181818;
+    padding-bottom: 3px;
+    text-decoration: none;
+}
+nav a:hover{
+    color: #760001;
+    border-bottom: 3px solid #760001;
+}
+
+/* Banner */
+
+#banner_image{
+    margin-top: 15px;
+    height: 200px;
+    border-radius: 5px;
+    background: url('recursos/images/sanfrancisco.jpg') no-repeat; 
+    position: relative; 
+    box-shadow: 0px 4px 4px #1c1a19; 
+    margin-bottom: 25px;
+}
+
+#banner_description { 
+    position: absolute; 
+    bottom: 0; 
+    border-radius: 0px 0px 5px 5px; 
+    width: 99.5%; 
+    height: 33px; 
+    padding-top: 15px; 
+    padding-left: 4px; 
+    background-color: rgb(24,24,24); /* Los navegadores antiguos leerán esto */ 
+    background-color: rgba(24,24,24,0.8); /* Los navegadores nuevos leerán esto */ 
+    color: white; 
+    font-size: 0.8em; 
+} 
+ 
+.red_button { 
+    display: inline-block; 
+    height: 25px; 
+    position: absolute; 
+    right: 5px; 
+    bottom: 5px; 
+    background: url('recursos/images/red_background.png') repeat-x; 
+    border: 1px solid #760001; 
+    border-radius: 5px; 
+    font-size: 1.2em; 
+    text-align: center; 
+    padding: 3px 8px 0px 8px; 
+    color: white; 
+    text-decoration: none; 
+} 
+ 
+.red_button img { 
+    border: 0; 
+} 
+
+/* Cuerpo */ 
+ 
+article, aside { 
+    display: inline-block; 
+    vertical-align: top; 
+    text-align: justify; 
+} 
+ 
+article { 
+    width: 625px; 
+    margin-right: 15px; 
+} 
+ 
+.cat_icon { 
+    vertical-align: middle; 
+    margin-right: 8px; 
+} 
+ 
+article p { 
+    font-size: 0.8em; 
+} 
+ 
+aside { 
+    position: relative; 
+    width: 235px; 
+    background-color: #706b64; 
+    box-shadow: 0px 2px 5px #1c1a19; 
+    border-radius: 5px;
+    padding: 10px; 
+    color: white; 
+    font-size: 0.9em; 
+} 
+ 
+#arrow { 
+    position: absolute; 
+    top: 100px; 
+    left: -12px; 
+} 
+ 
+#zozor_picture{ 
+    text-align: center; 
+} 
+ 
+#zozor_picture img { 
+    border: 1px solid #181818; 
+} 
+ 
+aside img { 
+    margin-right: 4px; 
+}
+
+
+/* Pie de página */
+ 
+footer { 
+    background:  url('recursos/images/top.png') no-repeat top center, url('recursos/images/line.png') repeat-x top, url('recursos/images/shadow.png') repeat-x top; 
+    padding-top: 25px; 
+} 
+ 
+footer p, footer ul { 
+    font-size: 0.8em; 
+} 
+ 
+footer h1 {
+    font-size: 1.1em; 
+} 
+ 
+#tweet, #my_pictures, #my_friends { 
+    display: inline-block; 
+    vertical-align: top; 
+} 
+ 
+#tweet { 
+    width: 28%; 
+} 
+ 
+#my_pictures { 
+    width: 35%; 
+} 
+ 
+#my_friends { 
+    width: 31%; 
+} 
+ 
+#my_pictures img { 
+    border: 1px solid #181818; 
+    margin-right: 2px; 
+} 
+ 
+#my_friends ul { 
+    display: inline-block; 
+    vertical-align: top; 
+    margin-top: 0; 
+    width: 48%; 
+    list-style-image: url('recursos/images/external_link.png'); 
+    padding-left: 2px; 
+} 
+ 
+#my_friends a { 
+    text-decoration: none; 
+    color: #760001; 
 }
