cambios interfaces y launch

--- a/Interfaces/Practica_02/stilo.css
+++ b/Interfaces/Practica_02/stilo.css
@@ -57,3 +57,17 @@ dt {
 footer {
     text-align: center;
 }
+
+@media (max-width:1000px){
+    #contenido{
+        flex-flow: column;
+    }
+
+    article{
+        order: 1;
+    }
+    aside{
+        order: 2;
+    }
+    
+}
