--- a/Interfaces/Practica_02/stilo.css
+++ b/Interfaces/Practica_02/stilo.css
@@ -58,16 +58,19 @@ footer {
     text-align: center;
 }
 
-@media (max-width:1000px){
+@media screen and (max-width:1000px){
     #contenido{
+        display: flex;
         flex-flow: column;
     }
 
-    article{
+    section{
         order: 1;
+        width: 90%;
     }
     aside{
         order: 2;
+        width: 90%;
     }
     
 }
