--- a/Interfaces/PR02_Lopez_Garcia_Sergio/css/stilo.css
+++ b/Interfaces/PR02_Lopez_Garcia_Sergio/css/stilo.css
@@ -1,71 +1,102 @@
-html{
+html {
     background: white;
+    margin: auto;
+    width: 1200px;
 }
-*{
+
+* {
     margin: 0px;
-
 }
+
 /* Ancho fijo de 1190 pixeles */
-body{
+
+body {
     width: 1190px;
-    background-color:white;
+    background-color: white;
     margin: 0 auto;
+    flex-wrap: wrap;
+    display: inline-flex;
 }
 
-
-header{
-    width: 590px; 
+header {
+    width: 590px;
     display: inline-block;
-    
 }
 
-#subtitulo{
-    
-}
-
-
-nav ul{
+nav ul {
     list-style-type: none;
 }
-nav li{
+
+nav li {
     display: inline-block;
 }
 
-
-#navPrincipal{
-    width: 590px; 
+#navPrincipal {
+    width: 590px;
     text-align: right;
     float: right;
-    padding-right:10px;
+    padding-right: 10px;
     height: 109px;
 }
-#pags li{
+
+#subtitulo {
+    width: 1190px;
+}
+
+#pags li {
     background: gray;
     border-radius: 5px;
-
 }
-#navSec{
+
+#navSec {
     width: 690px;
     display: inline-block;
 }
-#idioma{
+
+#idioma {
     width: 490px;
     display: inline-block;
-
 }
 
-#idioma li{
+#idioma li {
     display: inline-block;
     margin-right: 15px;
 }
 
-
-#festSpace{
+#program{
     width: 890px;
+    display: inline-block;
 }
-a{
+#foto{
+    float:right;
+}
+
+#about{
+    width: 490px;
+}
+
+#schedule{
+    width: 390px;
+}
+
+#festSpace {
+    width: 890px;
+    flex-wrap: wrap;
+    display: inline-flex;
+}
+
+a {
     padding: 5px;
 }
-.caix{
+
+.caix {
     width: 290px;
+}
+
+#how li{
+    list-style: none;
+    
+}
+#come li {
+    list-style-image: url('../img/check.png');
 }
