--- a/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/css/stilo.css
+++ b/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/css/stilo.css
@@ -6,6 +6,9 @@ html {
 
 * {
     margin: 0px;
+    padding: 0px;
+    background-color: wheat;
+    margin-bottom: 5px;
 }
 
 /* Ancho fijo de 1190 pixeles */
