--- a/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/css/stilo.css
+++ b/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/css/stilo.css
@@ -9,6 +9,7 @@ html {
     padding: 0px;
     background-color: wheat;
     margin-bottom: 5px;
+    border: solid 1px red;
 }
 
 /* Ancho fijo de 1190 pixeles */
