--- a/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/css/stilo.css
+++ b/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/css/stilo.css
@@ -1,15 +1,29 @@
-html {
-    background: white;
-    margin: auto;
-    width: 1200px;
-}
-
 * {
     margin: 0px;
     padding: 0px;
     background-color: wheat;
     margin-bottom: 5px;
     /*border: solid 1px red;*/
+}
+
+@font-face {
+    font-family: "PTSansRegular";
+    src: url('/recursos/font/PTSans/PTSans-Regular.ttf');
+    font-weight: 1;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "PTSansBold";
+    src: url('../recursos/font/PTSans/PTSans-Bold.ttf');
+    font-weight: 2;
+    font-style: normal;
+}
+
+html {
+    background: white;
+    margin: auto;
+    width: 1200px;
 }
 
 
