--- a/Gimnasio/css/gimstile.css
+++ b/Gimnasio/css/gimstile.css
@@ -4,6 +4,10 @@ body {
     min-height: 500px;
 }
 
+section {
+    background-color: aqua;
+}
+
 footer {
     width: 100%;
     min-height: 200px;
