--- a/Gimnasio/css/gimstile.css
+++ b/Gimnasio/css/gimstile.css
@@ -1,7 +1,61 @@
-header {}
-
 body {
     min-height: 500px;
+}
+
+header {
+    display: inline-block;
+}
+
+#banner {
+    display: inline-block;
+    width: 100%;
+}
+
+#banIzq {
+    display: inline-block;
+    width: 30%;
+    background-image: url(../recursos/logotipo-brazo-de-gimnasio.png) center center no-repeat;
+}
+
+#nombreGim {
+    display: inline-block;
+    width: 30%;
+}
+
+#banDch {
+    display: inline-block;
+    width: 30%;
+    background-image: url(../recursos/logotipo-brazo-de-gimnasio-derecho.png);
+}
+
+
+/*Flecha para scrol up rapido*/
+
+#back_to_top span {
+    width: 35px !important;
+    height: 35px !important;
+    line-height: 35px !important;
+    position: fixed;
+    bottom: 80px;
+    right: 15px;
+}
+
+#back_to_top>span {
+    font-size: 35px;
+    color: #fddf01;
+    height: 66px;
+    width: 66px;
+    border-radius: 100px;
+    background-color: #202020;
+    border-width: 0px;
+    line-height: 66px;
+}
+
+#back_to_top .fa-stack .arrow_carrot-up::before {
+    display: block !important;
+    content: url(../recursos/up-chevron.png);
+    position: absolute;
+    left: 21px;
 }
 
 section {
