--- a/Gimnasio/css/gimstile.css
+++ b/Gimnasio/css/gimstile.css
@@ -3,31 +3,29 @@ body {
 }
 
 header {
-    display: inline-block;
+    width: 100%;
 }
 
 #banner {
-    display: inline-block;
+    justify-content: space-between;
+    display: flex;
     width: 100%;
 }
 
 #banIzq {
-    display: inline-block;
-    width: 30%;
-    background-image: url(../recursos/logotipo-brazo-de-gimnasio.png) center center no-repeat;
+    width: 300px;
+    height: 300px;
+}
+
+#banIzq img {
+    
 }
 
 #nombreGim {
-    display: inline-block;
-    width: 30%;
+    width: 70%;
+    text-align: center;
+    background-color: blue;
 }
-
-#banDch {
-    display: inline-block;
-    width: 30%;
-    background-image: url(../recursos/logotipo-brazo-de-gimnasio-derecho.png);
-}
-
 
 /*Flecha para scrol up rapido*/
 
