--- a/Gimnasio/css/gimstile.css
+++ b/Gimnasio/css/gimstile.css
@@ -17,13 +17,13 @@ header {
     background-color: gray;
 }
 
-#banIzq {
+#logo {
     width: 170px;
     height: 170px;
     position: relative;
 }
 
-#banIzq img {
+#logo img {
     width: 170px;
     height: auto;
     top: 10%;
@@ -45,6 +45,13 @@ header {
 
 #login {
     object-position: top right;
+    height: 30px;
+    width: auto;
+}
+
+#login img{
+    resize: horizontal;
+    
 }
 
 #logNav nav #navPrin {
