--- a/Gimnasio/css/gimstile.css
+++ b/Gimnasio/css/gimstile.css
@@ -5,6 +5,7 @@ body {
 
 }
 
+/*El header ocupa el 100% del body,  */
 header {
     width: 100%;
     display: flex;
@@ -77,7 +78,7 @@ section {
     background-color: aqua;
 }
 
-/*Galeria de imagenes */
+/*Galeria de imagenes, un contenedor general */
 #fotoGaleria{
     display: flex;
     width: 100%;
@@ -85,11 +86,15 @@ section {
     background-color: aqua;
 
 }
+/*Cada imagen va en un contendor de la misma clase */
 .galeria{
     display: flex;
+    width: 350px;
+    height: 250px;
+    margin-left: 10px;
 }
 
-
+/*Pie de página.  */
 footer {
     display: flex;
     left: 0px;
@@ -108,8 +113,8 @@ footer {
 }
 
 
-/*Media query para pantallas tablet de entre  */
-@media screen and (max-width:1000px){
+/*Media query para pantallas tablet  */
+@media screen and (max-width:800px){
     body{
         display: flex;
         flex-flow: column;
@@ -118,6 +123,7 @@ footer {
         order: 1;
         width: 90%;
     }
+
     aside{
         order: 2;
         width: 90%;
@@ -141,9 +147,8 @@ footer {
     
 }
 
-/* 
-*/
-@media screen and (max-width:1000px){
+/*Media query para pantallas móviles  */
+@media screen and (max-width:400px){
     body{
         display: flex;
         flex-flow: column;
@@ -170,5 +175,17 @@ footer {
     footer .gim{
         order: 3;
         width: 90%;
+    }
+}
+
+@media print{
+    body{
+        background: none;
+    }
+    #logNav{
+        display: none;
+    }
+    aside{
+        display: none;
     }
 }
