--- a/Gimnasio/css/gimstile.css
+++ b/Gimnasio/css/gimstile.css
@@ -2,12 +2,12 @@
  */
 
 html {
-    max-height: 1000px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
 body {
-    max-height: 1000px;
+    max-width: 1000px;
     margin: 0 auto;
     background-color: lightgray;
 }
