--- a/Gimnasio/css/gimstile.css
+++ b/Gimnasio/css/gimstile.css
@@ -10,6 +10,16 @@ body {
     max-width: 1000px;
     margin: 0 auto;
     background-color: lightgray;
+    font-family: Arial;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: Arial, sans-serif;
 }
 
 
@@ -21,6 +31,10 @@ header {
     float: left;
     background-color: gray;
 }
+
+
+/*Dentro del header esta el logo, el nombre, el navegador y el login
+El banner contiene el logo y el nombre. Por lo que debe aparecer en linea */
 
 #banner {
     justify-content: space-between;
@@ -50,6 +64,9 @@ header {
     text-align: center;
 }
 
+
+/*El navegador dentro de un div junto al login */
+
 #logNav {
     float: right;
     width: 60%;
@@ -68,6 +85,9 @@ header {
     resize: horizontal;
     max-height: 50px;
 }
+
+
+/*El navegador tiene efecto con hover, por eso tiene el before y el hover */
 
 #logNav nav .navPrin {
     margin-top: 80px;
@@ -107,13 +127,16 @@ header {
     transform: scaleX(1);
 }
 
+
+/*La seccion contiene los elementos de las paginas. */
+
 section {
     margin-left: auto;
     margin-right: auto;
-    padding: 10px;
+    border: 5px;
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 90%;
     min-height: 60px;
 }
 
@@ -163,7 +186,7 @@ section h2 {
     flex-wrap: wrap;
     justify-content: space-between;
     flex-grow: 1;
-    width: 80%;
+    width: 95%;
 }
 
 
@@ -279,6 +302,9 @@ footer #gim img {
         width: 90%;
     }
 }
+
+
+/* media query para imprimir*/
 
 @media print {
     body {
