--- a/software_usado/font-awesome/css/font-awesome.css
+++ b/software_usado/font-awesome/css/font-awesome.css
@@ -93,6 +93,10 @@
   -webkit-animation: fa-spin 2s infinite linear;
   animation: fa-spin 2s infinite linear;
 }
+.fa-spin-neg {
+  -webkit-animation: fa-spin-neg 2s infinite linear;
+  animation: fa-spin-neg 2s infinite linear;
+}
 .fa-pulse {
   -webkit-animation: fa-spin 1s infinite steps(8);
   animation: fa-spin 1s infinite steps(8);
@@ -115,6 +119,26 @@
   100% {
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg);
+  }
+}
+@-webkit-keyframes fa-spin-neg {
+  0% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+}
+@keyframes fa-spin-neg {
+  0% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 }
 .fa-rotate-90 {
