--- a/Interfaces/bootstrap/panels/bootstrap.css
+++ b/Interfaces/bootstrap/panels/bootstrap.css
@@ -8422,7 +8422,7 @@ fieldset:disabled .btn {
 
 .bg-green {
     --bs-bg-opacity: 1;
-    background-color: rgba(var(--bs-gree), var(--bs-bg-opacity)) !important;
+    background-color: rgba(var(--bs-green-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-secondary {
